# love_record

./: .gitignore  DEPLOY_GUIDE.md  QUICKSTART.md  README.md  build.sh  clean_build.sh  config.example.json  configure.sh  deploy.sh  setup.py  wrangler.jsonc
backend/: CMakeLists.txt
backend/data/: lovedb.db
backend/include/: database.h  server.h
backend/src/: database.cpp  main.cpp  photo_service.cpp  server.cpp  server.cpp.backup  server.cpp.fix_backup  server.cpp.new
frontend/: fix_instructions.html  fix_instructions.html.backup  index.html
frontend/css/: style.css
frontend/js/: app.js  app.js.backup
